Fix nft tabs overflow to the second row

--- a/src/Assets/styles/style.scss
+++ b/src/Assets/styles/style.scss
@@ -5413,3 +5413,7 @@ iframe.metaverse {
     }
   }
 }
+
+.de_tab .nft_tabs_options .tab {
+  margin-bottom: 10px;
+}
